# vox

./: .dockerignore  .gitignore  Dockerfile  Taskfile.yml  pyproject.toml
spec/: openapi.json
src/: api.py  db.py  main.py  openapi.py  stt.py
src/recording/: async_worker.py  handler.py  service.py
src/user/: handler.py  service.py
ui/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
ui/src/: App.tsx
ui/src/lib/: api.ts
ui/src/openapi/: runtime.ts
ui/src/openapi/.openapi-generator/: FILES
ui/src/openapi/apis/: ApiApi.ts  AuthApi.ts  DefaultApi.ts  RecordingApi.ts  index.ts
ui/src/openapi/models/: AuthResponse.ts  HTTPValidationError.ts  ListRecordingResponse.ts  LoginRequest.ts  NewRecordingResponse.ts  PingResponse.ts  RecordingItem.ts  RegisterRequest.ts  ValidationError.ts  ValidationErrorLocInner.ts  index.ts
ui/src/pages/: home.tsx  login.tsx  signup.tsx
