[project]
name = "vox"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "huggingface-hub[hf-xet]>=0.34.4",
    "peewee>=3.18.2",
    "python-multipart>=0.0.20",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.55.0",
    "uvicorn>=0.35.0",
]
